unpackaged/main/default/objects/Activity/fields/Activity_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_Contact_ID__c</fullName>
    <description>Used as a checksum for activity reporting against any object with a contact (ie Emailed Activity with &quot;TO&quot; compared to SIN Contact ID - SFDC does not support direct Name ID in reporting.</description>
    <formula>WhoId</formula>
    <label>Activity Contact ID</label>
    <type>Text</type>
</CustomField>