unpackaged/main/default/objects/Activity/fields/Activity_Type_Annan__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_Annan__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Follow Up Call</fullName>
            </value>
            <value>
                <fullName>Transfer to CRC</fullName>
            </value>
            <value>
                <fullName>Transfer to NCMi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>