unpackaged/main/default/objects/Activity/fields/Activity_Type_Collections__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_Collections__c</fullName>
    <label>Collections Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successful Call</fullName>
            </value>
            <value>
                <fullName>Voice Message</fullName>
            </value>
            <value>
                <fullName>Email Client (Accounting)</fullName>
            </value>
            <value>
                <fullName>Email Client (Moderator)</fullName>
            </value>
            <value>
                <fullName>Email Moderator</fullName>
            </value>
            <value>
                <fullName>Returned call (from client)</fullName>
            </value>
            <value>
                <fullName>Incoming call (from client)</fullName>
            </value>
            <value>
                <fullName>Resend copy of invoice</fullName>
            </value>
            <value>
                <fullName>Escalation to Upper Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>