unpackaged/main/default/objects/Activity/fields/Activity_Type_NCMi__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_NCMi__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call: LVM</fullName>
            </value>
            <value>
                <fullName>Call: LVM &amp; Follow-Up Email</fullName>
            </value>
            <value>
                <fullName>Call: Not Connected</fullName>
            </value>
            <value>
                <fullName>Call: Not Connected &amp; Follow-Up Email</fullName>
            </value>
            <value>
                <fullName>Call Connect: Not Interested</fullName>
            </value>
            <value>
                <fullName>Call Connect: Prospecting</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>