unpackaged/main/default/objects/Activity/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>