unpackaged/main/default/objects/Activity/fields/Also_s__c.field-meta.xml
<CustomField>
    <fullName>Also_s__c</fullName>
    <label>Related Memberships</label>
    <type>TextArea</type>
</CustomField>