unpackaged/main/default/objects/Activity/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Link to the application document.</description>
    <label>Application</label>
    <type>Url</type>
</CustomField>