unpackaged/main/default/objects/Activity/fields/Approval_Decision__c.field-meta.xml
<CustomField>
    <fullName>Approval_Decision__c</fullName>
    <label>Approval Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Requires Additional Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>