unpackaged/main/default/objects/Activity/fields/Candidate_has_been_notified__c.field-meta.xml
<CustomField>
    <fullName>Candidate_has_been_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the candidate has been notified about the approval decision.</description>
    <inlineHelpText>Indicates the candidate has been notified about the approval decision.</inlineHelpText>
    <label>Candidate has been notified</label>
    <type>Checkbox</type>
</CustomField>