unpackaged/main/default/objects/Activity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
                <default>true</default>
                <label>Collections</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>