unpackaged/main/default/objects/Activity/fields/Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>