unpackaged/main/default/objects/Activity/fields/Completion_Difference__c.field-meta.xml
<CustomField>
    <fullName>Completion_Difference__c</fullName>
    <formula>ActivityDate -  DATEVALUE( CompletedDateTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>