unpackaged/main/default/objects/Activity/fields/Date_Stamp_Field_on_WhatId__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Field_on_WhatId__c</fullName>
    <description>The API name of the field on the related WhatId that needs to be datestamped when the Activity is Completed</description>
    <label>Date Stamp Field on WhatId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>