unpackaged/main/default/objects/Activity/fields/Date_Stamp_on_WhatId_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_on_WhatId_Format__c</fullName>
    <label>Date Stamp on WhatId Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>