unpackaged/main/default/objects/Activity/fields/Due_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Formatted__c</fullName>
    <formula>MID(TEXT(  ActivityDate  ), 6, 2)&amp;&quot;/&quot;&amp; MID(TEXT( ActivityDate ), 9, 2)&amp;&quot;/&quot;&amp;LEFT( TEXT( ActivityDate ) , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Formatted</label>
    <type>Text</type>
</CustomField>