unpackaged/main/default/objects/Activity/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <label>Duration (Days)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>