unpackaged/main/default/objects/Activity/fields/Effort_Level__c.field-meta.xml
<CustomField>
    <fullName>Effort_Level__c</fullName>
    <label>Effort Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>