unpackaged/main/default/objects/Activity/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>CSS_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>