unpackaged/main/default/objects/Activity/fields/Estimated_LOE__c.field-meta.xml
<CustomField>
    <fullName>Estimated_LOE__c</fullName>
    <label>LOE (Estimated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>