unpackaged/main/default/objects/Activity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Time Off</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
                <isActive>false</isActive>
                <label>Business Development</label>
            </value>
            <value>
                <fullName>Professional Development</fullName>
                <isActive>false</isActive>
                <label>Professional Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>