unpackaged/main/default/objects/Activity/fields/First_Invoice_w_new_dealership__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_w_new_dealership__c</fullName>
    <label>First Invoice w/new dealership</label>
    <type>Date</type>
</CustomField>