unpackaged/main/default/objects/Activity/fields/First_Month_of_Data__c.field-meta.xml
<CustomField>
    <fullName>First_Month_of_Data__c</fullName>
    <description>The month name we expect to first receive data from a client.</description>
    <inlineHelpText>The month name we expect to first receive data from a client.</inlineHelpText>
    <label>First Month of Data</label>
    <length>8</length>
    <type>Text</type>
</CustomField>