unpackaged/main/default/objects/Activity/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <label>Group Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>