unpackaged/main/default/objects/Activity/fields/Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Outbound__c</fullName>
    <inlineHelpText>Select whether this was generated going inbound / outbound</inlineHelpText>
    <label>Inbound / Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>