unpackaged/main/default/objects/Activity/fields/Invoiced_To__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_To__c</fullName>
    <description>The person who receives the invoices for this customer</description>
    <inlineHelpText>The person who receives the invoices for this customer</inlineHelpText>
    <label>Invoiced To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>