unpackaged/main/default/objects/Activity/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <label>LOE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>