unpackaged/main/default/objects/Activity/fields/LOE_Difference__c.field-meta.xml
<CustomField>
    <fullName>LOE_Difference__c</fullName>
    <formula>Estimated_LOE__c -  LOE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOE Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>