unpackaged/main/default/objects/Activity/fields/Marketing_Project_Request__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Project_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Project Request</label>
    <referenceTo>Request_Forms__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>