unpackaged/main/default/objects/Activity/fields/Marketing_Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Project_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Project Stage</label>
    <referenceTo>Marketing_Project_Stage__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>