unpackaged/main/default/objects/Activity/fields/Marketing_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Request_Name__c</fullName>
    <formula>Marketing_Project_Stage__r.Marketing_Project__r.Marketing_Request_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Request Name</label>
    <type>Text</type>
</CustomField>