unpackaged/main/default/objects/Activity/fields/Marketing_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Task_Type__c</fullName>
    <label>Marketing Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Task_Type</valueSetName>
    </valueSet>
</CustomField>