unpackaged/main/default/objects/Activity/fields/Meeting_Intranet_Id__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Intranet_Id__c</fullName>
    <label>Meeting (Intranet Id)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>