unpackaged/main/default/objects/Activity/fields/Meeting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Date__c</fullName>
    <label>Meeting Start Date</label>
    <type>Date</type>
</CustomField>