unpackaged/main/default/objects/Activity/fields/Membership_20G__c.field-meta.xml
<CustomField>
    <fullName>Membership_20G__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership (20G)</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>