unpackaged/main/default/objects/Activity/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>