unpackaged/main/default/objects/Activity/fields/NCM_Producer__c.field-meta.xml
<CustomField>
    <fullName>NCM_Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The NCM Moderator, Consultant, etc who is responsible for this Customer</description>
    <inlineHelpText>The NCM Moderator, Consultant, etc who is responsible for this Customer</inlineHelpText>
    <label>NCM Producer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>