unpackaged/main/default/objects/Activity/fields/New_Dealership__c.field-meta.xml
<CustomField>
    <fullName>New_Dealership__c</fullName>
    <label>New Dealership</label>
    <length>60</length>
    <type>Text</type>
</CustomField>