unpackaged/main/default/objects/Activity/fields/Next_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Next_Occurence__c</fullName>
    <label>Next Occurence</label>
    <type>Date</type>
</CustomField>