unpackaged/main/default/objects/Activity/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <label>Owner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Program Coordinator</fullName>
            </value>
            <value>
                <fullName>Travel Coordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>