unpackaged/main/default/objects/Activity/fields/Project_Stage_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage_Type__c</fullName>
    <description>Used for Marketing FLOWS  

DO NOT USE IN LAYOUTS</description>
    <label>Project Stage Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>