unpackaged/main/default/objects/Activity/fields/Sales_Invoice_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>c2g__codaInvoice__c</referenceTo>
    <relationshipLabel>Collection Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>