unpackaged/main/default/objects/Activity/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <label>Setup Fee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>