unpackaged/main/default/objects/Activity/fields/Spoke_with_Contact__c.field-meta.xml
<CustomField>
    <fullName>Spoke_with_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to help identify when a task results in a voice conversation with the desired contact.</description>
    <inlineHelpText>Used to help identify when a task results in a voice conversation with the desired contact</inlineHelpText>
    <label>Spoke with Contact</label>
    <type>Checkbox</type>
</CustomField>