unpackaged/main/default/objects/Activity/fields/Tactic__c.field-meta.xml
<CustomField>
    <fullName>Tactic__c</fullName>
    <formula>Marketing_Project_Stage__r.Campaign_Tactic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tactic</label>
    <type>Text</type>
</CustomField>