unpackaged/main/default/objects/Activity/fields/Task_Complete__c.field-meta.xml
<CustomField>
    <fullName>Task_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked Task Complete - Primarily used for Marketing Engine generated Events/Tasks for tracking</description>
    <label>Task Complete?</label>
    <type>Checkbox</type>
</CustomField>