unpackaged/main/default/objects/Activity/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <description>Used when Marketo sends an activity to SFDC - this is then matched to the UTM Term Field on the Campaign to assign the opportunity/lead appropriately.</description>
    <inlineHelpText>Used when Marketo sends an activity to SFDC - this is then matched to the UTM Term Field on the Campaign to assign the opportunity/lead appropriately</inlineHelpText>
    <label>UTM Term</label>
    <type>TextArea</type>
</CustomField>