unpackaged/main/default/objects/Activity/fields/X3rd_Party_Event__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Event__c</fullName>
    <label>3rd Party Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>