unpackaged/main/default/objects/Activity/listViews/MyTeamsActivities.listView-meta.xml
<ListView>
    <fullName>MyTeamsActivities</fullName>
    <filterScope>Team</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>My Team&#39;s Activities</label>
</ListView>